welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: type mismatch;
 found   : Unit
 required: Boolean
			{ if (nums(i)=nums(i+2)-1)
                                     ^